tests/snapshots/property_hooks_advanced__abstract_property_hooks.snap
---
source: tests/property_hooks_advanced.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [
                Token {
                    kind: Abstract,
                    span: Span {
                        start: 6,
                        end: 14,
                    },
                },
            ],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 21,
                    end: 34,
                },
            },
            extends: None,
            implements: [],
            members: [
                PropertyHook {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Abstract,
                            span: Span {
                                start: 41,
                                end: 49,
                            },
                        },
                        Token {
                            kind: Public,
                            span: Span {
                                start: 50,
                                end: 56,
                            },
                        },
                    ],
                    ty: Some(
                        Simple(
                            Token {
                                kind: TypeString,
                                span: Span {
                                    start: 57,
                                    end: 63,
                                },
                            },
                        ),
                    ),
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 64,
                            end: 69,
                        },
                    },
                    default: None,
                    hooks: [
                        PropertyHook {
                            attributes: [],
                            modifiers: [],
                            name: Token {
                                kind: Identifier,
                                span: Span {
                                    start: 80,
                                    end: 83,
                                },
                            },
                            params: [],
                            by_ref: false,
                            body: None,
                            span: Span {
                                start: 80,
                                end: 83,
                            },
                        },
                        PropertyHook {
                            attributes: [],
                            modifiers: [],
                            name: Token {
                                kind: Identifier,
                                span: Span {
                                    start: 93,
                                    end: 96,
                                },
                            },
                            params: [],
                            by_ref: false,
                            body: None,
                            span: Span {
                                start: 93,
                                end: 96,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 41,
                        end: 105,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 105,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 105,
    },
}
