tests/snapshots/property_hooks_advanced__property_hook_magic_constants.snap
---
source: tests/property_hooks_advanced.rs
expression: program
---
Program {
    statements: [
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Identifier,
                span: Span {
                    start: 12,
                    end: 18,
                },
            },
            extends: None,
            implements: [],
            members: [
                PropertyHook {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 25,
                                end: 31,
                            },
                        },
                    ],
                    ty: Some(
                        Simple(
                            Token {
                                kind: TypeString,
                                span: Span {
                                    start: 32,
                                    end: 38,
                                },
                            },
                        ),
                    ),
                    name: Token {
                        kind: Variable,
                        span: Span {
                            start: 39,
                            end: 44,
                        },
                    },
                    default: None,
                    hooks: [
                        PropertyHook {
                            attributes: [],
                            modifiers: [],
                            name: Token {
                                kind: Identifier,
                                span: Span {
                                    start: 55,
                                    end: 58,
                                },
                            },
                            params: [],
                            by_ref: false,
                            body: Expr(
                                MagicConst {
                                    kind: Property,
                                    span: Span {
                                        start: 62,
                                        end: 74,
                                    },
                                },
                            ),
                            span: Span {
                                start: 55,
                                end: 74,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 25,
                        end: 83,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 6,
                end: 83,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 83,
    },
}
